--- a/snake.css
+++ b/snake.css
@@ -45,10 +45,10 @@ body>h1{
   border-radius: 5px;
 }
 .food {
-  background-image: url('https://img1.picmix.com/output/stamp/normal/5/0/5/3/1283505_1a59f.gif');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+  background-color:rgb(255, 255, 1);
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px black;
+  border: 0.50px solid black;
 }
 .score__box{
   display: flex;
